--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv-keywords": "^5.1.0",
     "axios": "^1.7.2",
     "framer-motion": "^11.3.2",
     "lottie-react": "^2.4.0",
@@ -19,7 +20,7 @@
     "react-lottie": "^1.2.4",
     "react-notification-badge": "^1.5.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-scrollable-feed": "^2.0.2",
     "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4"
@@ -49,9 +50,12 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.25.7",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-env": "^7.25.7",
     "@types/react-router-dom": "^5.3.3",
-    "ajv": "^7.2.4",
+    "ajv": "^8.17.1",
+    "babel-loader": "^9.2.1",
     "eslint-plugin-react-hooks": "^4.6.2"
   }
 }
